--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,13 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "comma-dangle": [
+    "no-underscore-dangle": [
       "error",
       {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "never",
-        "exports": "never",
-        "functions": "never"
+        "allow": [
+          "_id"
+        ]
       }
-    ],
-    "no-console": "off",
-    "operator-linebreak": ["error", "after"],
-    "global-require": 0,
-    "linebreak-style": 0,
-    "no-multiple-empty-lines": 0,
-    "consistent-return": 0
+    ]
   }
 }
